install correct pip

--- a/.github/workflows/sdk-build.yml
+++ b/.github/workflows/sdk-build.yml
@@ -28,7 +28,7 @@ jobs:
           apt-get -y install sudo
           apt-get -y install wget
           apt-get -y install tree
-          apt-get -y install python-pip
+          apt-get -y install python3-pip
           pip install cmake
           apt-get -y install libcurl4-openssl-dev
           apt-get -y install software-properties-common
