--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -218,7 +218,7 @@ jobs:
           add-apt-repository ppa:ubuntu-toolchain-r/test ;
           apt-get install -y wget
           apt-get install -y libstdc++6 libcurl4-openssl-dev'
-          apt-get install -y python-pip
+          apt-get install -y python3-pip
           pip install cmake
 
       - name: Download package
