--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -217,7 +217,7 @@ jobs:
           apt-get update ;
           apt-get install -y python3-pip ;
           pip install cmake ;
-          apt-get install -y libstdc++6 libcurl4-openssl-dev'
+          apt-get install -y libstdc++6 libcurl4-openssl-dev bash'
 
       - name: Download package
         uses: actions/download-artifact@v4
