--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -215,10 +215,10 @@ jobs:
       - name: Setup C++ runtime
         run: docker exec --user root unreal bash -c '
           apt-get update ;
+          apt-get install -y libstdc++6 libcurl4-openssl-dev wget ;
           wget https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.tar.gz ;
           tar zxvf cmake-3.12.0-Linux-x86_64.tar.gz ;
-          export PATH=$PATH:/home/ue4/cmake-3.12.0-Linux-x86_64
-          apt-get install -y libstdc++6 libcurl4-openssl-dev bash'
+          export PATH=$PATH:/home/ue4/cmake-3.12.0-Linux-x86_64'
 
       - name: Download package
         uses: actions/download-artifact@v4
