--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   build:
-    runs-on: windows-2019
+    runs-on: windows-latest-4-cores
     steps:
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -19,4 +19,4 @@ jobs:
       - name: Build Unreal Engine Docker image
         run: |
           ue4-docker setup
-          ue4-docker build -basetag ltsc2019 --visual-studio 2019 --target minimal --exclude debug --exclude templates -isolation=process -username=${{ secrets.DOCKER_USERNAME }} -password=${{ secrets.DOCKER_TOKEN }} 4.27.0
+          ue4-docker build -basetag ltsc2022 --visual-studio 2022 --target minimal --exclude debug --exclude templates -isolation=process -username=${{ secrets.DOCKER_USERNAME }} -password=${{ secrets.DOCKER_TOKEN }} 5.5.1
