--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -19,4 +19,5 @@ jobs:
       - name: Build Unreal Engine Docker image
         run: |
           ue4-docker setup
+          ue4-docker diagnostics 20gig
           ue4-docker build -basetag ltsc2022 --visual-studio 2022 --target minimal --exclude debug --exclude templates -isolation=process -username=${{ secrets.DOCKER_USERNAME }} -password=${{ secrets.DOCKER_TOKEN }} 5.5.1
