--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-latest-4-cores
     steps:
       - name: Print disk space
         run: |
@@ -23,4 +23,4 @@ jobs:
       - name: Build Unreal Engine Docker image
         run: |
           ue4-docker setup
-          ue4-docker build -basetag ltsc2022 --visual-studio 2022 --target minimal --exclude debug --exclude templates -isolation=process -username=${{ secrets.DOCKER_USERNAME }} -password=${{ secrets.DOCKER_TOKEN }} 5.3.2
+          ue4-docker build -basetag ltsc2022 --visual-studio 2022 --target minimal --exclude debug --exclude templates -isolation=process -username=${{ secrets.DOCKER_USERNAME }} -password=${{ secrets.DOCKER_TOKEN }} 4.27.2
