--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -6,7 +6,16 @@ jobs:
   build:
     runs-on: windows-latest-4-cores
     steps:
-      - name: Print disk space
+      - name: Print disk space 1
+        run: |
+          Get-PSDrive
+
+      - name: Clean up some space
+        run: |
+          del /q /s %TEMP%\*
+          docker system prune -a -f
+
+      - name: Print disk space 2
         run: |
           Get-PSDrive
 
