--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Clean up disk space
         run: |
           docker system prune -a -f
-          rmdir /s /q "C:\Users\runneradmin\AppData\Local\Android\Sdk"
+          rmdir /s "C:\Users\runneradmin\AppData\Local\Android\Sdk"
 
       - name: Print disk space 2
         run: |
