--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Build Unreal Engine Docker image
         run: |
           ue4-docker setup
-          ue4-docker build -basetag ltsc2022 --visual-studio 2019 --target minimal --exclude debug --exclude templates -isolation=process -username=${{ secrets.DOCKER_USERNAME }} -password=${{ secrets.DOCKER_TOKEN }} custom -repo=https://github.com/EpicGames/UnrealEngine.git -branch="4.27"
+          ue4-docker build -basetag ltsc2022 --visual-studio 2019 --target minimal --exclude debug --exclude templates -isolation=process -username=${{ secrets.DOCKER_USERNAME }} -password=${{ secrets.DOCKER_TOKEN }} custom -repo=https://github.com/EpicGames/UnrealEngine.git -branch="4.27" --opt buildgraph-args="-set:WithClient=false -set:WithServer=false"
