--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -215,10 +215,8 @@ jobs:
       - name: Setup C++ runtime
         run: docker exec --user root unreal bash -c '
           apt-get update ;
-          apt-get install -y libstdc++6 libcurl4-openssl-dev wget ;
-          wget https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.tar.gz ;
-          tar zxvf cmake-3.12.0-Linux-x86_64.tar.gz ;
-          export PATH=$PATH:/home/ue4/cmake-3.12.0-Linux-x86_64'
+          add-apt-repository ppa:ubuntu-toolchain-r/test ;
+          apt-get install -y libstdc++6'
 
       - name: Download package
         uses: actions/download-artifact@v4
