--- a/sample/SentryPlayground.uproject
+++ b/sample/SentryPlayground.uproject
@@ -30,6 +30,10 @@
 		{
 			"Name": "EditorTests",
 			"Enabled": true
+		},
+		{
+			"Name": "WindowsMoviePlayer",
+			"Enabled": false
 		}
 	],
 	"TargetPlatforms": [
