--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,12 @@ jobs:
       target: Win64-Breakpad
       runsOn: windows-2019
 
+  native-sdk:
+    uses: ./.github/workflows/native-sdk-download.yml
+    with:
+      target: Native
+      runsOn: ubuntu-latest
+
   build:
     needs: [android-sdk, ios-sdk, macos-sdk, linux-sdk, linux-arm64-sdk, windows-crashpad-sdk, windows-breakpad-sdk]
     name: Package
