--- a/.github/workflows/native-sdk-download.yml
+++ b/.github/workflows/native-sdk-download.yml
@@ -25,18 +25,14 @@ jobs:
             submodule="modules/sentry-native"
           fi
           echo "submodule=$submodule" >> $GITHUB_OUTPUT
-          echo "path=plugin-dev/Source/ThirdParty/${{ inputs.target }}" >> $GITHUB_OUTPUT
 
       - name: Get submodule status
         run: |          
           git submodule status --cached ${{ steps.env.outputs.submodule }} | tee submodule-status
 
-      - uses: actions/cache@v4
-        id: cache
-        with:
-          path: |
-            ${{ steps.env.outputs.path }}
-          key: sdk=${{ inputs.target }}-${{ hashFiles('submodule-status', '.github/workflows/native-sdk-download.yml') }}
+      - name: Download
+        run: |
+          git submodule update --init --recursive ${{ steps.env.outputs.submodule }}
 
       - uses: actions/upload-artifact@v4
         with:
