--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       runsOn: ubuntu-latest
 
   build:
-    needs: [android-sdk, ios-sdk, macos-sdk, linux-sdk, linux-arm64-sdk, windows-crashpad-sdk, windows-breakpad-sdk]
+    needs: [android-sdk, ios-sdk, macos-sdk, linux-sdk, linux-arm64-sdk, windows-crashpad-sdk, windows-breakpad-sdk, native-sdk]
     name: Package
     runs-on: ubuntu-latest
     steps:
@@ -107,6 +107,11 @@ jobs:
         with:
           name: Win64-Breakpad-sdk
           path: plugin-dev/Source/ThirdParty/Win64/Breakpad
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: Native-sdk
+          path: plugin-dev/Source/ThirdParty/Native/sentry-native
 
       - name: Prepare Sentry packages for release
         shell: pwsh
