--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ plugin-dev/Source/ThirdParty/CLI/*
 sample/.sentry-native
 sample/.vsconfig
 sample/SentryPlayground.uproject.DotSettings.user
+
+# Visual Studio solution file from building Sentry Native
+*.sln
