--- a/.github/workflows/ue-win-docker-build.yml
+++ b/.github/workflows/ue-win-docker-build.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Clean up disk space for Docker build
         shell: pwsh
         run: |
-          ./${{ github.workspace }}/checkout/scripts/clean-storage-win.ps1
+          .\scripts\clean-storage-win.ps1
 
       # TODO Docker build steps
