--- a/.github/workflows/native-sdk-download.yml
+++ b/.github/workflows/native-sdk-download.yml
@@ -37,5 +37,11 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.target }}-sdk
-          path: ${{ steps.env.outputs.submodule }}
+          path: |
+            ${{ steps.env.outputs.submodule }}
+            !${{ steps.env.outputs.submodule }}/examples
+            !${{ steps.env.outputs.submodule }}/fuzzing-examples
+            !${{ steps.env.outputs.submodule }}/ndk
+            !${{ steps.env.outputs.submodule }}/scripts
+            !${{ steps.env.outputs.submodule }}/tests
           retention-days: ${{ github.ref_name == 'main' && 14 || 1 }}
