--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       ue_version:
-        description: "Select Unreal Engine version"
+        description: Select Unreal Engine version
         required: true
         type: choice
         options:
