--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -64,7 +64,7 @@ jobs:
           -isolation=process \
           -username=${{ secrets.DOCKER_USERNAME }} \
           -password=${{ secrets.DOCKER_TOKEN }}
-          --visual-studio ${{ steps.env.outputs.vs_version }} \
+          --visual-studio ${{ steps.set_vs_version.outputs.vs_version }} \
           --target minimal \
           --exclude debug \
           --exclude templates \
