--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -15,6 +15,11 @@ on:
         - 5.3
         - 5.4
         - 5.5
+      ue_repo:
+        description: Set Unreal Engine repository
+        required: true
+        type: string
+        default: 'https://github.com/getsentry/UnrealEngine.git'
 
 jobs:
   build:
@@ -56,7 +61,7 @@ jobs:
 
       - name: Build Unreal Engine Docker image
         run: |
-          ue4-docker build custom -repo=https://github.com/getsentry/UnrealEngine.git -branch="${{ inputs.ue_version }}" `
+          ue4-docker build custom -repo="${{ inputs.ue_repo }}" -branch="${{ inputs.ue_version }}" `
           -basetag ltsc2022 `
           -suffix "${{ inputs.ue_version }}" `
           -isolation=process `
