--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -51,14 +51,23 @@ jobs:
           python-version: '3.12.8'
           architecture: 'x64'
 
-      - name: Install unreal-docker
+      # ue4-docker v0.0.115 has a known bug (https://github.com/adamrehn/ue4-docker/issues/371) 
+      # that breaks the current workflow. As a workaround, we pull the latest sources from upstream 
+      # and build it locally instead of installing via pip.
+      - name: Check out unreal-docker
+        uses: actions/checkout@master
+        with:
+          repository: adamrehn/ue4-docker
+          path: unreal-docker
+
+      - name: Build and install unreal-docker
         run: |
-          pip install ue4-docker
+          cd unreal-docker
+          pip install . --user
 
       - name: Configure unreal-docker
         run: |
           ue4-docker setup
-          ue4-docker diagnostics network
 
       - name: Build Unreal Engine Docker image
         run: |
