--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -25,6 +25,7 @@ jobs:
   build:
     runs-on: windows-latest-16-cores
 
+    steps:
       - name: Test connection to UE fork
         run: |
           git ls-remote https://${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_TOKEN }}@github.com/getsentry/UnrealEngine.git
