--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -21,9 +21,16 @@ on:
         type: string
         default: 'https://github.com/getsentry/UnrealEngine.git'
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
   build:
     runs-on: windows-latest-16-cores
+
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Test connection to UE fork
@@ -79,9 +86,16 @@ jobs:
 
       - name: Tag Unreal Engine Docker image
         run: |
-          docker tag adamrehn/ue4-minimal:custom-${{ inputs.ue_version }} ghcr.io/${{ secrets.DOCKER_USERNAME }}/unreal-docker:${{ inputs.ue_version }}
+          docker tag adamrehn/ue4-minimal:custom-${{ inputs.ue_version }} ${{ env.REGISTRY }}/getsentry/sentry-unreral/unreal-docker:${{ inputs.ue_version }}
+
+      - name: Log in to GitHub package registry
+        uses: docker/login-action@v3
+        if: ${{ steps.exists.outputs.value == 0 }}
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push Unreal Engine Docker image to GitHub package registry
         run: |
-          echo ${{ secrets.DOCKER_TOKEN }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker push ghcr.io/${{ secrets.DOCKER_USERNAME }}/unreal-docker:${{ inputs.ue_version }}
+          docker push ${{ env.REGISTRY }}/getsentry/sentry-unreal/unreal-docker:${{ inputs.ue_version }}
