--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -89,7 +89,7 @@ jobs:
           docker tag adamrehn/ue4-minimal:custom-${{ inputs.ue_version }} ${{ env.REGISTRY }}/getsentry/unreal-docker:${{ inputs.ue_version }}
 
       - name: Log in to GitHub package registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         if: ${{ steps.exists.outputs.value == 0 }}
         with:
           registry: ${{ env.REGISTRY }}
