--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -31,6 +31,7 @@ env:
 
 jobs:
   build:
+    name: 'Build for UE ${{ inputs.ue_version }}'
     runs-on: windows-latest-32-cores
 
     permissions:
