--- a/.github/workflows/linux-test.yml
+++ b/.github/workflows/linux-test.yml
@@ -1,5 +1,3 @@
-name: Linux UE Build and Test
-
 on:
   workflow_call:
     inputs:
@@ -8,7 +6,7 @@ on:
         type: string
 
 jobs:
-  build-test:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -53,7 +51,7 @@ jobs:
             --env HOME="/home/$user" \
             --env PATH="/home/$user/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" \
             --network ip6net -p 80:80 \
-            ghcr.io/epicgames/unreal-engine:dev-slim-${{ inputs.unreal_version }}.1
+            ghcr.io/epicgames/unreal-engine:dev-slim-${{ inputs.unreal-version }}.1
           docker logout ghcr.io
           # Add the user so it has a home directory (needed to run tests later on)
           docker exec --user root unreal useradd -u $uid -g $gid --create-home $user
@@ -69,7 +67,7 @@ jobs:
           uid=$(id -u) # the GH action user ID
           docker exec --user root unreal bash -c "
             chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/Mono/Linux ;
-            chown -R $uid /home/ue4/UnrealEngine/Engine/${{ inputs.unreal_version == '4.27' && 'Programs/UnrealPak/Saved' || 'Binaries/ThirdParty/DotNet' }} ;
+            chown -R $uid /home/ue4/UnrealEngine/Engine/${{ inputs.unreal-version == '4.27' && 'Programs/UnrealPak/Saved' || 'Binaries/ThirdParty/DotNet' }} ;
             chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/USD/UsdResources/Linux ;
             mkdir -p /home/ue4/UnrealEngine/Epic/UnrealEngine && chown -R $uid /home/ue4/UnrealEngine/Epic ;
             mkdir -p /home/ue4/UnrealEngine/Engine/Source/Epic/UnrealEngine && chown -R $uid /home/ue4/UnrealEngine/Engine/Source/Epic ;
@@ -92,7 +90,7 @@ jobs:
           submodules: recursive
 
       - name: Extract package to sample/Plugins
-        run: unzip sentry-unreal-*-engine${{ inputs.unreal_version }}-github.zip -d checkout/sample/Plugins/sentry
+        run: unzip sentry-unreal-*-engine${{ inputs.unreal-version }}-github.zip -d checkout/sample/Plugins/sentry
 
       - name: Set permissions for sample
         # sentry-native requires write access to sample project directory in order to initialize itself properly
@@ -116,7 +114,7 @@ jobs:
             -archive
           docker exec -w /workspace/checkout/sample unreal bash -c "
             cp -r '/home/gh/Library/Logs/Unreal Engine/LocalBuildLogs' Saved/Logs  "
-          docker exec -w /workspace/checkout/sample unreal /home/ue4/UnrealEngine/Engine/Binaries/Linux/${{ inputs.unreal_version == '4.27' && 'UE4Editor' || 'UnrealEditor' }} \
+          docker exec -w /workspace/checkout/sample unreal /home/ue4/UnrealEngine/Engine/Binaries/Linux/${{ inputs.unreal-version == '4.27' && 'UE4Editor' || 'UnrealEditor' }} \
             /workspace/checkout/sample/SentryPlayground.uproject \
             -ReportExportPath=/workspace/checkout/sample/Saved/Automation \
             -ExecCmds="Automation RunTests Sentry;quit" \
@@ -130,7 +128,7 @@ jobs:
         if: ${{ always() && steps.run-tests.outcome == 'failure' }}
         uses: actions/upload-artifact@v4
         with:
-          name: UE ${{ inputs.unreal_version }} sample test report
+          name: UE ${{ inputs.unreal-version }} sample test report
           path: |
             checkout/sample/Saved/Automation
 
@@ -138,7 +136,7 @@ jobs:
         if: contains(fromJson('["success", "failure"]'), steps.run-tests.outcome)
         uses: actions/upload-artifact@v4
         with:
-          name: UE ${{ inputs.unreal_version }} sample build logs
+          name: UE ${{ inputs.unreal-version }} sample build logs
           path: |
             checkout/sample/Saved/Logs
             checkout/sample/Saved/Stats
