--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,26 +133,26 @@ jobs:
 
   test-linux:
     needs: [package-preparation]
-    name: Test UE Linux ${{ matrix.unreal }}
+    name: Linux UE ${{ matrix.unreal }}
     secrets: inherit
     strategy:
       fail-fast: false
       matrix:
         # Note: these versions must match scripts/packaging/engine-versions.txt
-        unreal: ['4.27', '5.0', '5.1', '5.2', '5.3', '5.4',]
+        unreal: ['4.27', '5.0', '5.1', '5.2', '5.3', '5.4', '5.5']
     uses: ./.github/workflows/linux-test.yml
     with:
       unreal-version: ${{ matrix.unreal }}
 
   test-windows:
     needs: [package-preparation]
-    name: Test UE Windows ${{ matrix.unreal }}
+    name: Windows UE ${{ matrix.unreal }}
     secrets: inherit
     strategy:
       fail-fast: false
       matrix:
         # Note: these versions must match scripts/packaging/engine-versions.txt
-        unreal: ['4.27', '5.0', '5.1', '5.2', '5.3', '5.4',]
+        unreal: ['4.27', '5.0', '5.1', '5.2', '5.3', '5.4', '5.5']
     uses: ./.github/workflows/windows-test.yml
     with:
       unreal-version: ${{ matrix.unreal }}
